--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <!-- Vitrine 1 -->
       <div class="col-md-4 mb-4">
         <div class="card shadow-sm">
-          Veja video do curso
+          <b>Veja video do curso</b>
           <div class="video-container">
             <iframe src="https://www.youtube.com/embed/GYve0ttCnZ0?si=AwMJ6o2hhxkF2e8T" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
           </div>
@@ -51,7 +51,7 @@
       <!-- Vitrine 2 -->
       <div class="col-md-4 mb-4">
         <div class="card shadow-sm">
-          Veja video do curso
+          <b>Veja video do curso</b>
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/j07lYTQ8dfU?si=jQav3f5kgC64S8qf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </div>
           <div class="card-body">
@@ -71,7 +71,7 @@
       <!-- Vitrine 3 -->
       <div class="col-md-4 mb-4">
         <div class="card shadow-sm">
-          Veja video do curso
+          <b>Veja video do curso</b>
           <div class="video-container">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/VQlfTY5BU-g?si=xPXntFp-V7BdjJY7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
            </div>
@@ -80,14 +80,35 @@
             <p class="card-text"> Renderizador para arquitetura e design de produtos que se destaca por oferecer não somente a imagem do produto mas também um sistema único de realidade virtual. Com poucos cliques transforme o seu projeto em uma apresentação virtual onde o cliente possa passear livremente pelos ambientes, visualizar vista de planta e interagir com os objetos.que te ensinaremos no curso você irá criar renders ultra realistas, utilizando apenas de um esboço,
                podendo ser feito na mão, no CAD ou no SketchUP!</p>
             <a href='https://api.whatsapp.com/send?phone=5581985503305&text=Quero%20saber%20mais%20sobre%20o%20Curso%20on%20line%20ARQ%20AI-PRO%20' target="_blank">
-              <button class="btn btn-whatsapp">Atendimento</button>
+              <button class="btn btn-whatsapp" style="color:'blue';">Atendimento</button>
             </a><p></p>
             <a href='https://go.hotmart.com/G95531390S?ap=2dc0' target="_blank">
               <button class="btn btn-custom-yellow">Comprar agora</button>
             </a>
           </div>
         </div>
+        
       </div>
+    </div>
+    <div class="col-md-4 mb-4">
+      <div class="card shadow-sm">
+        <b>Veja video do curso</b>
+        <div class="video-container">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/q1w0b4CRBas?si=KgCrI9npN8B6PjOX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>  
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Curso Completo de Enscape</h5>
+          <p class="card-text"> Integra-se perfeitamente ao seu software de modelagem 3D, proporcionando renderizações em tempo real de alta qualidade. 
+            Esta ferramenta revolucionária permite que arquitetos e designers visualizem seus projetos de maneira realista e impressionante.</p>
+          <a href='https://api.whatsapp.com/send?phone=5581985503305&text=Quero%20saber%20mais%20sobre%20o%20Curso%20on%20line%20ARQ%20AI-PRO%20' target="_blank">
+            <button class="btn btn-whatsapp" style="color:'blue';">Atendimento</button>
+          </a><p></p>
+          <a href='https://go.hotmart.com/O95531312B' target="_blank">
+            <button class="btn btn-custom-yellow">Comprar agora</button>
+          </a>
+        </div>
+      </div>
+      
     </div>
   </div>
 
